# payly-django

./: .gitignore  Makefile  Pipfile  manage.py  requirements.txt  setup.cfg
account/: admin.py
account/migrations/: 0001_initial.py
account/models/: __init__.py  user.py
account/templates/: account.html  receipts.html
account/templatetags/: custom_filter.py
account/views/: __init__.py  home.py  receipts.py
apps/account/: admin.py
apps/account/migrations/: 0001_initial.py
apps/account/models/: __init__.py  user.py
apps/account/views/: __init__.py  home.py  receipts.py
apps/administrator/: urls.py
apps/administrator/templatetags/: custom_filter.py
apps/administrator/views/: __init__.py  home.py
apps/administrator/views/services/: __init__.py  create.py  show_all.py
apps/auth_service/forms/: __init__.py  login.py
apps/auth_service/views/: __init__.py  login.py
apps/collaborator/: admin.py
apps/collaborator/forms/: telmex_form.py
apps/collaborator/migrations/: 0001_initial.py
apps/collaborator/models/: collaborator_service_pay.py
apps/collaborator/static/js/collaborator/pay/: telmex.js
apps/collaborator/views/: __init__.py  pay_service.py  process_order.py
apps/firebase_db/: apps.py
apps/firebase_db/models/: __init__.py  authentication.py  collections.py
apps/landing_page/views/: __init__.py  landing.py
apps/services/: admin.py
apps/services/forms/: form.py
apps/services/migrations/: 0001_initial.py
apps/services/models/: base_service.py  service.py  service_type.py
apps/services/views/: __init__.py
auth_service/forms/: __init__.py  login.py
auth_service/helpers/: firebase_auth.py
auth_service/static/css/: auth.css
auth_service/templates/: base_auth.html  login.html  register.html  reset.html
auth_service/views/: __init__.py  login.py  logout.py
authservice/forms/: __init__.py
authservice/templates/: base.html  login.html  register.html
authservice/views/: __init__.py  login.py
collaborator/: admin.py
collaborator/forms/: base_service_form.py  telmex_form.py
collaborator/templates/collaborator/: pay_service_base.html
collaborator/templates/collaborator/services/: telmex.html
collaborator/views/: __init__.py  pay_service.py  process_order.py
firebase_db/: apps.py
firebase_db/helpers/: settings.py
firebase_db/models/: __init__.py  authentication.py  collections.py
landing_page/static/css/: landing.css
landing_page/templates/: landing.html
landing_page/views/: __init__.py  landing.py
payly2/: asgi.py  settings.py  urls.py  wsgi.py
services/static/js/: amountCheck.js  checkAmount copy.js  checkAmount.js
services/templates/: base_services.html  index.html  pay_service.html
services/views/: __init__.py  pay_service.py  show_all_services.py
static/administrator/css/: soft-ui-dashboard.css  soft-ui-dashboard.css.map  soft-ui-dashboard.min.css
static/administrator/js/: soft-ui-dashboard.js
static/administrator/scss/soft-ui-dashboard/: _variables.scss
static/css/: style.css
static/js/collaborator/pay/: telmex.js
static/js/services/: predial.js
superusers/: apps.py
templates/account/: account.html  receipts.html
templates/administrator/accounts/: login.html  register.html
templates/administrator/home/: billing.html  customers.html  index.html  page-403.html  page-404.html  page-500.html  profile.html  services.html  sign-in.html  sign-up.html  tables.html
templates/administrator/includes/: footer.html  navigation.html  scripts.html  sidebar.html
templates/administrator/layouts/: base-fullscreen.html  base.html
templates/administrator/services/: create_service.html  services.html
templates/authentication/: login.html  register.html  reset.html
templates/services/: base_services.html  index.html
tests/: base.py  test_account.py  test_autentication.py  test_collections.py  test_landing.py  test_login.py  test_logout.py  test_services.py
tests/account/: test_account.py
tests/collaborator/services/: test_pay_telmex.py
