[metadata]
description-file = README.md

[flake8]
format = wemake
show-source = True
statistics = False
doctests = True
enable-extensions = G

# Plugins:
accept-encodings = utf-8
max-complexity = 6
max-line-length = 120
max-arguments = 11
max-try-body-length = 3
radon-max-cc = 10
radon-show-closures = True
radon-no-assert = True

# Self settings:
max-imports = 20
max-methods = 31
max-local-variables = 7

exclude =
    .git
    __pycache__
    node_modules
    .env
    .venv
    .vscode
    .pytest_cache
    .mypy_cache
    env
    settings.py
    manage.py

ignore =
    A003 # Python builtin class attribute
    C101 # Coding magic comment not found
    D100 # Missing docstring in public module
    D101 # Missing docstring in public class
    D102 # Missing docstring in public method
    D103 # Missing docstring in public function
    D104 # Missing docstring in public package
    D105 # Missing docstring in magic method
    D106 # Missing docstring in public nested class
    D107 # Missing docstring in __init__
    D401 # First line should be in imperative mood
    DAR # Darglint
    N803 # Argument name should be lowercase
    RST # RST Docstrings
    W503 # Line break before binary operator
    WPS115 # Upper-case constant in a class
    WPS202 # Too many module members
    WPS323 # Missing empty line between `coding` magic comment and code
    WPS412 # init module with logic
    WPS601 # Shadowed class attribute
    WPS442 # Outer scope name shadowing
    WPS110 # Wrong variable name
    WPS226 # String constant over-use
    WPS100 # Wrong module name
    WPS305 # Found `f` string
    F401
    WPS102
    S311

per-file-ignores =
    tests/*.py: E501, WPS117, WPS204, WPS210, WPS226, WPS414, WPS435, WPS440, WPS441
    src/handlers/rewards/**/*.py: WPS210, WPS221, WPS440, WPS437, WPS349, WPS432, WPS347, F401,F403, E501, F401, WPS102, WPS338, WPS230, F841, E501, WPS212, WPS425
    src/helpers.py: WPS100, WPS432
    src/handlers/change_customer_email/handler.py: WPS226
    src/handlers/create_customer/app.py: WPS211
    src/handlers/cognito/**.py: WPS204, WPS117, WPS221, WPS226, WPS232, WPS432
    tests/specs/update_secret_code_spec.py: WPS219, WPS117
    tests/specs/rewards/load_reward_process/helpers/format_reward_spec.py: WPS316, N400
    tests/specs/rewards/load_reward_process/helpers/format_reward_code_spec.py: WPS316, N400
    tests/specs/utils_spec.py: WPS204, WPS117, WPS436, WPS441
    src/handlers/finish_onboarding/app.py: WPS213
    tests/specs/finish_onboarding_spec.py: WPS204, WPS117
    tests/specs/rewards/get_rewards/reward_evaluator_spec.py: E501, WPS204
    tests/specs/rewards/helpers/dynamo_client_spec.py: E501, WPS437
    tests/specs/rewards/redeem_reward/helpers/AssignReward_spec.py: WPS102, WPS204, WPS437, E501
    tests/specs/rewards/redeem_reward/redeem_reward_spec.py: WPS204, WPS117
    tests/specs/rewards/reward_update_externals/reward_update_externals_spec.py: WPS432, WPS117, WPS435
    src/handlers/banner/assign_banner_card/handler.py: WPS221, WPS219
    src/handlers/export_data/*.py: WPS347
    tests/specs/migration_customer_data/helpers_spec.py: WPS347
    src/handlers/import_data/sources/*.py: F401, WPS300, WPS407
    src/handlers/import_data/helpers.py: WPS347
    tests/specs/import_data/sources/*.py: WPS117, WPS204, WPS317, WPS347 WPS432
    tests/specs/banner/utils_spec.py: WPS204, WPS117
    tests/specs/update_address_spec.py: WPS220, WPS117
    src/handlers/update_address/address_updaters/__init__.py: F401, E501
    src/handlers/update_address/address_updaters/interface/__init__.py:  F401, E501
    src/handlers/referrals/update_status/constants.py: WPS114
    src/handlers/referrals/campaigns/metal_card/constants.py: WPS114
    src/handlers/banner/builders/metal_card_challenge/app/metal_card_banner_assigner.py: WPS204

[isort]
# https://github.com/timothycrosley/isort/wiki/isort-Settings
include_trailing_comma = true
multi_line_output = 3
line_length = 88
indent = 4

[coverage:run]
omit =
  */settings.py
  .tox/*
parallel = true

[vulture]
exclude=*settings.py,docs/

[mypy]
ignore_missing_imports = True
namespace_packages = True
explicit_package_bases = True
exclude =
    settings.py